--- a/.env
+++ b/.env
@@ -1,38 +1,53 @@
+#Control Unit Environment
 #================================================================
-#Monitoring Environment
+#HOSTNAME --> Nama Gerbang dan Gardu (Penulisan "NamaGerbang"_"NomorGardu")
+#IP --> Alamat IP CU yang terhubung dengan akes Internet
 #================================================================
-#Nama Gerbang dan Gardu
-HOSTNAME = CIKUNIR4_6
-#IP Address
+HOSTNAME = CIKUNIR4_5
 IP = 10.0.4.2
-#================================================================
+
 #HDD Directory
 #================================================================
-HDD = "/media/avc/WD/data/"
+#HDD --> Alamat direktori hardisk yang terbaca oleh CU
 #================================================================
+HDD = "/media/avc/WD/data/"
+
 #GTO STATUS
 #================================================================
-GTO = "false"
+#GTO --> kondisi "true" ketika terhubung dengan GTO sedangkan "false" tidak terhubung dengan GTO
 #================================================================
+GTO = "false"
+
 #Telegram
+#================================================================
+#TELEGRAM_BOT_TOKEN --> Token untuk BOT telegram
+#CHAT_ID --> Channel atau Grup ID Telegram Chat
+#GERBANG --> Nama Gerbang
+#GARDU --> Nomor Gardu
 #================================================================
 TELEGRAM_BOT_TOKEN = 1770185119:AAFKfQHyVHYwhwJT66IeL9mRiBl4nvW0UxQ
 CHAT_ID = -1001323845503
-GERBANG = Cikunir
-GARDU = 4
-#================================================================
+GERBANG = Cikunir4
+GARDU = 5
+
 #Dashboard Environment
 #================================================================
-#End Point Untuk Lidar
-REACT_APP_PROXY3008 = //192.168.100.131:3008
-#End Point Untuk Kamera
-REACT_APP_PROXY3007 = //192.168.100.168:3007
-#End Point Untuk Annotator
-REACT_APP_PROXY3006 = //192.168.88.103:3006
-#End Point Untuk Melihat Gambar
-REACT_APP_PROXY8080=//192.168.88.103:8080
+#REACT_APP_PROXY3008 --> End Point Untuk Backend Lidar
+#REACT_APP_PROXY3007 --> End Point Untuk Backend Kamera
+#REACT_APP_PROXY3006 --> End Point Untuk Backend Audit
+#REACT_APP_PROXY8080 --> End Point Untuk Backend Image Viewer
 #================================================================
+REACT_APP_PROXY3008 = //10.0.4.2:3008
+REACT_APP_PROXY3007 = //192.168.100.168:3007
+REACT_APP_PROXY3006 = //10.0.4.2:3006
+REACT_APP_PROXY8080=//10.0.4.2:8080
+
 #AI Environment
+#================================================================
+# MASK_CAM1, MASK_CAM2,dan MASK_CAM3 -->  nama file untuk masking gambar camera 1,2,dan 3
+# MODEL_2CAM --> model yang digunakan untuk mengklasifikasikan golongan kendaraan berdasarkan kamera 1 dan 2
+# MODEL_3CAM --> model yang digunakan untuk mengkalsifikasikan golongan kendaraan 4 dan 5 berdasarkan kamera 3
+# RTSP_CAM1, RTSP_CAM2,dan RTSP_CAM3 --> alamat RTSP untuk mengakses kamera 1,2,dan 3
 #================================================================
 MASK_CAM1 = mask-6class.jpg
 MASK_CAM2 = mask-6class-cam2.jpg
