--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 #IP --> Alamat IP CU yang terhubung dengan akes Internet
 #================================================================
 HOSTNAME = CIKUNIR4_5
-IP = 10.0.4.2
+IP = 10.0.3.2
 
 #HDD Directory
 #================================================================
@@ -16,7 +16,7 @@ HDD = "/media/avc/WD/data/"
 #================================================================
 #GTO --> kondisi "true" ketika terhubung dengan GTO sedangkan "false" tidak terhubung dengan GTO
 #================================================================
-GTO = "false"
+GTO = "true"
 
 #Telegram
 #================================================================
@@ -37,10 +37,10 @@ GARDU = 5
 #REACT_APP_PROXY3006 --> End Point Untuk Backend Audit
 #REACT_APP_PROXY8080 --> End Point Untuk Backend Image Viewer
 #================================================================
-REACT_APP_PROXY3008 = //10.0.4.2:3008
+REACT_APP_PROXY3008 = //10.0.3.2:3008
 REACT_APP_PROXY3007 = //192.168.100.168:3007
-REACT_APP_PROXY3006 = //10.0.4.2:3006
-REACT_APP_PROXY8080=//10.0.4.2:8080
+REACT_APP_PROXY3006 = //10.0.3.2:3006
+REACT_APP_PROXY8080=//10.0.3.2:8080
 
 #AI Environment
 #================================================================
@@ -54,6 +54,6 @@ MASK_CAM2 = mask-6class-cam2.jpg
 MASK_CAM3 = mask-6class-cam3.jpg
 MODEL_2CAM = 7class-v1.plan
 MODEL_3CAM = 6class-3cam-d1-bn-v2.plan
-RTSP_CAM1 = rtsp://root:avc12345@10.0.4.10/live1s1.sdp
-RTSP_CAM2 = rtsp://admin:avc12345@10.0.4.11/cam/realmonitor?channel=1&subtype=0
-RTSP_CAM3 = rtsp://admin:avc12345@10.0.4.12/cam/realmonitor?channel=1&subtype=0
+RTSP_CAM1 = rtsp://root:avc12345@10.0.3.10/live1s1.sdp
+RTSP_CAM2 = rtsp://admin:avc12345@10.0.3.11/cam/realmonitor?channel=1&subtype=0
+RTSP_CAM3 = rtsp://admin:avc12345@10.0.3.12/cam/realmonitor?channel=1&subtype=0
