update clear serial

--- a/.env
+++ b/.env
@@ -54,6 +54,7 @@ MASK_CAM2 = mask-6class-cam2.jpg
 MASK_CAM3 = mask-6class-cam3.jpg
 MODEL_2CAM = 7class-v1.plan
 MODEL_3CAM = 6class-3cam-d1-bn-v2.plan
+MODEL_OBJECT_DETECTION = avc.engine
 RTSP_CAM1 = rtsp://root:avc12345@10.0.3.10/live1s1.sdp
 RTSP_CAM2 = rtsp://admin:avc12345@10.0.3.11/cam/realmonitor?channel=1&subtype=0
 RTSP_CAM3 = rtsp://admin:avc12345@10.0.3.12/cam/realmonitor?channel=1&subtype=0
