update docker-compose and mount

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ GARDU = 5
 REACT_APP_PROXY3008 = //10.0.3.2:3008
 REACT_APP_PROXY3007 = //192.168.100.168:3007
 REACT_APP_PROXY3006 = //10.0.3.2:3006
-REACT_APP_PROXY8080=//10.0.3.2:8080
+REACT_APP_PROXY8080 = //10.0.3.2:8080
 
 #AI Environment
 #================================================================
