--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,3 +129,21 @@ services:
         command: -config.file=/etc/promtail/docker-config.yml
         networks:
             - loki
+    
+    Watchtower:
+        container_name: watchtower
+        image: containrrr/watchtower
+        restart: always
+        privileged: false
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+        environment:
+            - WATCHTOWER_CLEANUP=true
+            - WATCHTOWER_DEBUG=true
+            - WATCHTOWER_POLL_INTERVAL=10800
+        command:
+            - Annotator
+            - Dashboard
+            - AIcam
+            - AuditAPI
+            - LidarAPI
